# wanikani-apprentice

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Brewfile  Cargo.toml  Dockerfile  Procfile  README.md  README.rst  fly.toml  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: config.rs  constants.rs  db.rs  main.rs  middleware.rs  models.rs  resources.rs  wanikani.rs
src/wanikani_apprentice/: app.py  config.py  constants.py  db.py  errors.py  models.py  resources.py  utils.py  wanikani.py
src/wanikani_apprentice/templates/: assignments.html.j2  layout.html.j2  login.html.j2
templates/: assignments.html  layout.html  login.html
tests/: conftest.py  factories.py  test_app.py  test_db.py  test_models.py  test_utils.py  test_version.py  test_wanikani.py
