[package]
name = "wanikani-apprentice"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9.0", features = ["cookie-private"] }
chrono = { version = "0.4.31", features = ["serde"] }
chrono-humanize = "0.2.3"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.28"
git-version = "0.3.5"
http-body-util = "0.1.0"
hyper = "1.0.1"
include_dir = "0.7.3"
mime_guess = "2.0.4"
minijinja = { version = "1.0.8" , features = ["loader"] }
once_cell = "1.18.0"
regex = "1.9.5"
reqwest = { version = "0.12.2", features = ["json"] }
sentry = { version = "0.32.0", features = ["tracing", "tower", "tower-axum-matched-path", "tower-http"] }
sentry-tower = { version = "0.32.0", features = ["http", "axum-matched-path"] }
sentry-tracing = "0.32.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["catch-panic", "trace", "fs", "compression-full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

[dev-dependencies]
mockito = "1.2.0"
rstest = "0.19.0"
similar-asserts = "1.5.0"

[profile.release]
# Enable line numbers in Sentry
debug = 1
